📖 DOC: Update README.md

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 						</p>
 						<h3 class="component-title ">Install manually</h3>
 						<p>
-							Include <code>drift.css</code> in your website or Web app.
+							Include <code>cascare.css</code> in your website or Web app.
 						</p>
 						<iframe loading="lazy" src="https://carbon.now.sh/embed/s35sMW1Lv0YcmUnmGqp3">
 						</iframe>
@@ -252,7 +252,7 @@
 						<h3 class="component-title ">Install via CDN</h3>
 
 						<details class="code-dropdown">
-							<summary>Use the following CDN link to include driftcss in your project.
+							<summary>Use the following CDN link to include cascare in your project.
 							</summary>
 							<div class="iframe-container">
 
